[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/placeholder_textures/Orange.tres" type="Material" id=1]
[ext_resource path="res://entities/doors/simple_door.gd" type="Script" id=2]
[ext_resource path="res://utils/text_3d.tscn" type="PackedScene" id=3]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 1, 2, 0.2 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.5, 1, 0.1 )

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("door_left:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -90, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("door_right:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 90, 0 ) ]
}

[node name="simple_door" type="Spatial"]
script = ExtResource( 2 )

[node name="door_left" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0 )

[node name="door_left" type="MeshInstance" parent="door_left"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, 0.1 )
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="door_left"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, 0.1 )
shape = SubResource( 2 )

[node name="door_right" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0 )

[node name="door_right" type="MeshInstance" parent="door_right"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, 0.1 )
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="CollisionShape2" type="CollisionShape" parent="door_right"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, 0.1 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/open = SubResource( 3 )

[node name="text_3d" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0459607, -0.515182, 0.264191 )
text = "[E to Open]"
size = 256
billboard_size = Vector2( 2000, 2000 )
billboard = false

[node name="text_3d2" parent="." instance=ExtResource( 3 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.00935188, -0.515182, -0.0790481 )
text = "[E to Open]"
size = 256
billboard_size = Vector2( 2000, 2000 )
billboard = false
